About screen now works on mobile, TODO: Fix other screens

--- a/styles/aboutScreen.css
+++ b/styles/aboutScreen.css
@@ -14,8 +14,8 @@
   text-align: center;
   min-height: 100%;
   top: 0;
-  left: 150px;
-  right: 150px;
+  left: 10%;
+  right: 10%;
   background-color: rgba(0, 0, 0,0.7);
 
   transition: left .3s ease-in-out, right .3s ease-in-out;
@@ -24,15 +24,14 @@
 
 .aboutText{
   margin:auto;
-  padding: 10px 40px;
   text-align: justify;
   display: block;
+  padding: 10px;
   color: rgba(255,255,255,0.8);
 }
 
 .upper{
   margin-top: 25px;
-  padding: 10px 40px;
   font-size: 19px;
 }
 
